# lizardist

./: .pre-commit-config.yaml  README.md  pyproject.toml
benchmark/: gradient_bucketing_benchmark.md
examples/: train_mnist.py
lizardist/distributed/: communicator.py  sync.py
lizardist/engine/: model.py
lizardist/utils/: logger.py
