[project]
requires-python = ">=3.10"
name = "lizardist"
version = "0.1.0"
description = "Minimal distributed training framework using MPI and PyTorch"
readme = "README.md"
dependencies = [
    "torch>=2.0.0",
    "mpi4py>=4.0.0",
    "numpy>=1.21.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "pre-commit>=4.2.0",
]


[tool.uv]
package = true

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
    "mypy>=1.10.0",
    "pytest>=8.2.1",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
[tool.mypy-h5py]
ignore_missing_imports = true
namespace_packages = true

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "B", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lizardist*"]
exclude = ["examples", "tests"]
